Release 6.0.0
Reset from zero.
ADDED: New Gui. More compact now.
ADDED: Possibility to edit the mods from your instances!
ADDED: New Splash. Include a progress bar to show the state of the load.
ADDED: Custom JRE to the launcher.
ADDED: Encoder/decoder. It uses XZ Data Compression.
ADDED: Beta support to MACOSX.
ADDED: Possibility to create your owns modpacks.
CHANGED: Load method of the launcher.
CHANGED: Remember username/password method.
CHANGED: Console. Now displays more specific information.
CHANGED: Minecraft launcher system.
CHANGED: Ubication where all instances were saved.
DELETED: Quiz.java. Useless now.
DELETED: Theme selector, instead it's only one available.
FIXED: bugs #19 and #20.